test/files/neg/t6601.check
AccessPrivateConstructor_2.scala:2: error: constructor PrivateConstructor in class PrivateConstructor cannot be accessed in class AccessPrivateConstructor
  new PrivateConstructor("") // Scalac should forbid accessing to the private constructor!
  ^
one error found
